footer spacing fix

--- a/src/pages/About/styles.scss
+++ b/src/pages/About/styles.scss
@@ -155,7 +155,7 @@ p {
     gap: 8vw;
     padding: 4vw;
     margin-top: 0;
-    margin-bottom: 64px;
+    margin-bottom: 24px;
   }
 }
 
